syntax = "proto3";

package notification;

service Service {
    rpc Notify (NotifyRequest) returns (NotifyResponse);
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message NotifyRequest {
    string email = 1;
    string fullname = 2;
    string slug = 3;
    string origin = 4;
}

message NotifyResponse {}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}